Update/fix the Hello Debugger code snippet and resources for the MSYS2 version

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
@@ -44,7 +44,7 @@ With SplashKit!
 :::note[Using MSYS2/MINGW64?]
 If you are using MSYS2/MINGW64, and get warnings with the code above, you can download/save these [Resources](/resources/code-examples/part-0/HelloDebuggerResources.zip).
 
-Unzip the zip file and place the `Resources` folder into your project folder.
+Unzip the zip file, click into the `HelloDebuggerResources` folder, and then copy the `Resources` folder into your project folder.
 
 Then copy the following code into your Program.cs file:
 
@@ -52,7 +52,7 @@ Then copy the following code into your Program.cs file:
 using static SplashKitSDK.SplashKit;
 
 // download resources from online source
-LoadBitmap("sk-github-logo", "sk-github-logo");
+LoadBitmap("sk-github-logo", "sk-github-logo.png");
 LoadFont("roboto-italic", "Roboto-Italic.ttf");
 
 // terminal text output
