--- a/src/content/docs/book/appendix/0-installation/0-overview.mdx
+++ b/src/content/docs/book/appendix/0-installation/0-overview.mdx
@@ -57,9 +57,9 @@ These guides have been created to help you set up your computer and install the 
 <Card title="macOS" icon="fa-brands:apple">
   Follow these steps to set up your Mac computer to get started coding.
 
-  For this you will need a *macOS* computer running OS X 12.0 or later.
+  For this you will need a *macOS* computer running OSX 13 (macOS Ventura) or later.
   
-  Note: *If you are running an earlier version, make sure to read the [No SplashKit Global Install](/book/appendix/0-installation/3-0-troubleshooting-install/#no-splashkit-global-install) troubleshooting guide once you have finished the setup steps, or if you have any issues.*
+  Note: *If you are running an earlier version, make sure to read the [Using older OSX version](https://splashkit.io/troubleshoot/macos/mac-issue-8/) troubleshooting guide once you have finished the setup steps, or if you have any issues.*
 
   <LinkCard
     title="macOS Software Setup Guide"
