--- a/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
@@ -105,8 +105,8 @@ bash <(curl -s https://raw.githubusercontent.com/splashkit/skm/master/install-sc
 
 :::tip[Troubleshooting tips:]
 
-1. If the command above **does nothing**, go to the [No response when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#no-response-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for an alternative installation process.
-2. If you see a message about "**permission denied**" or "**Operation not permitted**", go to the [Permission issue when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#permission-issue-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for steps to follow to resolve this issue.
+1. If the command above **does nothing**, go to [this troubleshooting page](https://splashkit.io/troubleshoot/macos/mac-issue-1/) on the SplashKit website for an alternative installation process.
+2. If you see a message about "**permission denied**" or "**Operation not permitted**", go to the [Permission issue when running SplashKit installation command](https://splashkit.io/troubleshoot/macos/mac-issue-3/) page on the SplashKit website for steps to follow to resolve this issue.
 
 :::
 
@@ -163,7 +163,7 @@ You can install the `code` command to allow you to open any file or folder in a 
 Follow the steps in the [**Launching from the command line**](https://code.visualstudio.com/docs/setup/mac#_launching-from-the-command-line) section of the *Visual Studio Code on macOS* article to install this command.
 
 :::tip[Troubleshooting tip:]
-If you are having issues with the `code` command not working after following the steps above, go to the ['zsh: command not found: code'](/book/appendix/0-installation/3-0-troubleshooting-install/#zsh-command-not-found-code) section in the Installation Troubleshooting page for to use an alternative installation process.
+If you are having issues with the `code` command not working after following the steps above, go to the ['zsh: command not found: code'](https://splashkit.io/troubleshoot/macos/mac-issue-5/) page on the SplashKit website for to use an alternative installation process.
 :::
 
 ### Recommended Extensions
