--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -132,7 +132,7 @@ bash <(curl -s https://raw.githubusercontent.com/splashkit/skm/master/install-sc
 ```
 
 :::tip[Troubleshooting tip:]
-If you have issues installing the SplashKit SDK, go to the [No response when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#no-response-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for an alternative installation process.
+If you have issues installing the SplashKit SDK, go to [this troubleshooting page](https://splashkit.io/troubleshoot/windows-msys2/win-issue-1) on the SplashKit website for an alternative installation process.
 :::
 
 :::note[Curious to know more?]
@@ -273,10 +273,6 @@ For coding in C#, you will need to install the `.NET` SDK which will allow you t
 :::
 
 Download the latest version of the .NET SDK for macOS from the official .NET website: [dotnet.microsoft.com/download](https://dotnet.microsoft.com/download)
-
-:::caution[.NET 9 Not compatible with SplashKit when using "dotnet run"]
-If you have installed .NET 9, check the [`dotnet run` unable to find SplashKit library](/book/appendix/0-installation/3-0-troubleshooting-install/#dotnet-run-unable-to-find-splashkit-library) section of the Troubleshooting page.
-:::
 
 Run the downloaded installer and follow on-screen instructions.
 
