--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
@@ -11,7 +11,7 @@ Add an [if statement](/book/part-1-instructions/3-control-flow/0-panorama/2-bran
 
 :::tip
 
-You need to add `using SplashKit;` so that you can access `KeyCode.RightKey`.
+You need to add `using SplashKitSDK;` so that you can access `KeyCode.RightKey`.
 
 :::
 
