--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-designing-in-general.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-designing-in-general.mdx
@@ -2,6 +2,7 @@
 title: Designing in General
 sidebar:
   label: " - Design in General"
+draft: true
 ---
 
 When you are designing a program you need to think about each function or procedure, and determine if it requires data to be given to it to enable it to perform its action. Any data it requires must then be passed to it using [parameters](/book/part-2-organised-code/2-organising-code/2-trailside/04-parameter). The key to understanding parameters is to remember that each function/procedure is its own isolated domain. It can have its own data, using [local variables](/book/part-2-organised-code/2-organising-code/2-trailside/03-local-variable), and has its own instructions. In most cases these instructions will need to be given some starting data, some information upon which to act.
