Add in dynamic memory tour and advanced tour

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-02-populating-printing.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-02-populating-printing.mdx
@@ -12,9 +12,9 @@ With the plan in place, we can now start to code this up. In this section we can
 We can get this going pretty quickly by:
 
 1. Work out where you are going to save this project, create the folder if needed, and open it in VS Code.
-2. Create a new **stats-capc.cpp** code file.
-3. Copy in your *utilities.h* and *utilities.cpp* files from the the [shared utilities](/book/part-2-organised-code/2-organising-code/1-tour/04-00-utilities) activity. This will contain the `read_integer` and `read_double` functions we need. If either of these are missing, you should code them in your utilities files.
-4. Add the following code to your **stats-capc.cpp** file to kick things off:
+2. Create a new **stats-calc.cpp** code file.
+3. Copy in your *utilities.h* and *utilities.cpp* files from the [shared utilities](/book/part-2-organised-code/2-organising-code/1-tour/04-00-utilities) activity. This will contain the `read_integer` and `read_double` functions we need. If either of these are missing, you should code them in your utilities files.
+4. Add the following code to your **stats-calc.cpp** file to kick things off:
 
 ```cpp
 /* stats-calc.cpp - from the field guide. written by ... */
