--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/02-2-add.md
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/02-2-add.md
@@ -116,4 +116,4 @@ int main()
 
 Make sure your program builds and runs before you move on.
 
-Try working with an initial capacity of `0`. I ended up changing my `add` method to double and `+ 1` so that it works when the capacity was originally 0. As 2 * 0 is still 0.
+Try working with an initial capacity of `0`. I ended up changing my `add` method to double and `+ 1` so that it works when the capacity was originally 0. As `2 * 0` is still 0.
